# Microsoft_Investor_scrapper

./: .gitignore  README.md  main.py  pyproject.toml
src/: client.py  utils.py  worker.py
